# SQLite_Cpp

./: .gitignore  CMakeLists.txt  README.md  run_tests.sh
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
src/: database.hpp  main.cpp
tests/: CMakeLists.txt  test_database.cpp
